# private-membership

research/InsPIRe-client/: Cargo.toml  build-wasm.sh
research/InsPIRe-client/src/: commons.rs  convolution.rs  lib.rs  noise_analysis.rs  packing.rs  scheme.rs  util.rs
research/InsPIRe-client/web/: example.html
research/InsPIRe-server/: .gitignore  Cargo.toml
research/InsPIRe-server/other/: db_gen.sh
research/InsPIRe-server/src/: commons.rs  lib.rs
research/spiral-rs/src/: client.rs  discrete_gaussian.rs  poly.rs
