[package]
name = "inspire"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spiral-rs = { path = "../spiral-rs" }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
fastrand = "2.0.0"
log = "0.4.20"
pad = "0.1.6" # Or the latest version
wasm-bindgen = "0.2"

# Terminal-dependent dependencies (not compatible with WebAssembly)
env_logger = { version = "0.11.1", optional = true }
clap = { version = "4.5.0", features = ["derive"], optional = true }
test-log = { version = "0.2.14", optional = true }
rayon = { version = "1.7", optional = true }
tqdm = { version = "0.7.0", optional = true }

[features]
default = ["terminal"]
terminal = ["env_logger", "clap", "test-log", "rayon", "tqdm"]


[profile.release-with-debug]
inherits = "release"
debug = true
